--- a/Homework/matplotlib/mypyber.ipynb
+++ b/Homework/matplotlib/mypyber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "4  Richardfort            38  Urban  2018-04-17 02:26:37  23.00   720020655850"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,9 +120,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fare</th>\n",
+       "      <th>driver_count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bradshawfurt</th>\n",
+       "      <td>40.064000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Garzaport</th>\n",
+       "      <td>24.123333</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Harringtonfort</th>\n",
+       "      <td>33.470000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jessicaport</th>\n",
+       "      <td>36.013333</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lake Jamie</th>\n",
+       "      <td>34.358333</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     fare  driver_count\n",
+       "city                                   \n",
+       "Bradshawfurt    40.064000             7\n",
+       "Garzaport       24.123333             7\n",
+       "Harringtonfort  33.470000             4\n",
+       "Jessicaport     36.013333             1\n",
+       "Lake Jamie      34.358333             4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Obtain the x and y coordinates for each of the three city types\n",
     "urban = rawdata.loc[rawdata[\"type\"]==\"Urban\"]\n",
@@ -140,6 +215,7 @@
     "avg_fare_per_suburban_city = suburban.groupby([\"city\"])[\"fare\",\"driver_count\"].mean()\n",
     "avg_fare_per_rural_city = rural.groupby([\"city\"])[\"fare\",\"driver_count\"].mean()\n",
     "\n",
+    "\n",
     "# Merge dfs and rename driver count column\n",
     "urban_rides = pd.merge(rides_drivers_per_urban_city, avg_fare_per_urban_city, on=\"city\")\n",
     "urban_rides = urban_rides.rename(columns={\"ride_id\":\"total_rides\",\"fare\":\"average_fare\",\"driver_count\":\"total_drivers\"})\n",
@@ -148,7 +224,9 @@
     "suburban_rides = suburban_rides.rename(columns={\"ride_id\":\"total_rides\",\"fare\":\"average_fare\",\"driver_count\":\"total_drivers\"})\n",
     "\n",
     "rural_rides = pd.merge(rides_drivers_per_rural_city, avg_fare_per_rural_city, on=\"city\")\n",
-    "rural_rides = rural_rides.rename(columns={\"ride_id\":\"total_rides\",\"fare\":\"average_fare\",\"driver_count\":\"total_drivers\"})"
+    "rural_rides = rural_rides.rename(columns={\"ride_id\":\"total_rides\",\"fare\":\"average_fare\",\"driver_count\":\"total_drivers\"})\n",
+    "\n",
+    "avg_fare_per_rural_city.head()"
    ]
   },
   {
